--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,8 +42,12 @@ requirements:
     - janus <1.1,>=0.6
     - nest-asyncio <2,>=1.5.8
     - orjson <4,>=3.6.4
-    - protobuf ==3.20.2
-    - rich <13,>=12.6.0
+    # - protobuf ==3.20.2
+    # we have protobuf 3.20.3
+    - protobuf >=3.20.2,<=3.20.3
+    # - rich <13,>=12.6.0
+    # we have rich 12.5.0
+    - rich <13,>=12.5.0
     - typer <1,>=0.9.0
     - python-json-logger <3,>=2.0.2
     - pyyaml <7.0,>=6.0
