--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,24 +6,60 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/hail-is/{{ name }}/archive/refs/tags/{{ version }}.tar.gz
-  sha256: def7eb3e17d15bbb3dfba00dfc8a966771b839b04b639386ee61c8927d0c7ae8
+  # the build process requires a repository to set some variables
+  # (e.g. version)
+  git_url: https://github.com/hail-is/hail.git
+  git_rev: {{ version }}
 
 build:
   number: 0
+  # avro and others a not available for win
+  skip: true  # [py<39 or win or py>311]
+  # entry_points:
+  #   - hailctl = hailtop.hailctl.__main__:main
 
 requirements:
   build:
     - {{ compiler('cxx') }}
-    - make
+    - make  # [linux]
     # - rsync
   host:
     - python
     - pip
+    - setuptools
+    - pytest-runner
     - pyspark >=3.3.2,<=3.4.1
     - openjdk 11.*
     - lz4
     - libsimdpp
+    # hailctl build needs these here
+    - aiodns >=2.0.0,<3
+    - aiohttp >=3.9,<4
+    - azure-identity >=1.6.0,<2
+    - azure-mgmt-storage ==20.1.0
+    - azure-storage-blob >=12.11.0,<13
+    - boto3 >=1.17,<2.0
+    - botocore >=1.20,<2.0
+    - dill >=0.3.6,<0.4
+    - frozenlist >=1.3.1,<2
+    - google-auth >=2.14.1,<3
+    - google-auth-oauthlib >=0.5.2,<1
+    - humanize >=1.0.0,<2
+    - janus >=0.6,<1.1
+    - nest-asyncio <2,>=1.5.8
+    - orjson >=3.6.4,<4
+    # - protobuf ==3.20.2
+    # we have protobuf 3.20.3
+    - protobuf >=3.20.2,<=3.20.3
+    # - rich <13,>=12.6.0
+    # we have rich 12.5.0
+    - typer >=0.9.0,<1
+    - python-json-logger >=2.0.2,<3
+    - pyyaml >=6.0,<7.0
+    - sortedcontainers >=2.4.0,<3
+    - tabulate >=0.8.9,<1
+    - uvloop >=0.19.0,<1  # [not win]
+    - jproperties >=2.1.1,<3
   run:
     - python
     - openjdk 11.*
