--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,6 +60,7 @@ requirements:
     - tabulate >=0.8.9,<1
     - uvloop >=0.19.0,<1  # [not win]
     - jproperties >=2.1.1,<3
+    - pkg_resources
   run:
     - python
     - openjdk 11.*
