--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,9 @@ requirements:
     - {{ compiler('cxx') }}
     - make  # [linux]
     # - rsync
+    # - setuptools
+    # - pytest-runner
+    - git
   host:
     - python
     - pip
@@ -60,7 +63,6 @@ requirements:
     - tabulate >=0.8.9,<1
     - uvloop >=0.19.0,<1  # [not win]
     - jproperties >=2.1.1,<3
-    - pkg_resources
   run:
     - python
     - openjdk 11.*
