--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,8 @@ source:
 build:
   number: 0
   # avro and others a not available for win
-  skip: true  # [py<39 or win or py>311]
+  # openjdk and pyspark not available for s390x
+  skip: true  # [py<39 or win or py>311 or s390x]
   # entry_points:
   #   - hailctl = hailtop.hailctl.__main__:main
 
@@ -26,9 +27,6 @@ requirements:
     - make  # [linux]
     - patch     # [not win]
     - m2-patch  # [win]
-    # - rsync
-    # - setuptools
-    # - pytest-runner
     - git
   host:
     - python
