--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,6 +36,7 @@ requirements:
     - python
     - pip
     - setuptools
+    # pre requisites
     - pytest-runner
     - pyspark >=3.3.2,<=3.4.1
     - openjdk 11.*
@@ -57,13 +58,14 @@ requirements:
     - google-auth-oauthlib >=0.5.2,<1
     - humanize >=1.0.0,<2
     - janus >=0.6,<1.1
-    - nest-asyncio <2,>=1.5.8
+    - nest-asyncio >=1.5.8,<2
     - orjson >=3.6.4,<4
     # - protobuf ==3.20.2
     # we have protobuf 3.20.3
     - protobuf >=3.20.2,<=3.20.3
-    # - rich <13,>=12.6.0
+    # - rich >=12.6.0,<13
     # we have rich 12.5.0
+    - rich >=12.5.0,<13
     - typer >=0.9.0,<1
     - python-json-logger >=2.0.2,<3
     - pyyaml >=6.0,<7.0
@@ -74,45 +76,45 @@ requirements:
   run:
     - python
     - openjdk 11.*
-    - aiodns <3,>=2.0.0
-    - aiohttp <4,>=3.9
-    - azure-identity <2,>=1.6.0
+    - aiodns >=2.0.0,<3
+    - aiohttp >=3.9,<4
+    - azure-identity >=1.6.0,<2
     - azure-mgmt-storage ==20.1.0
-    - azure-storage-blob <13,>=12.11.0
-    - boto3 <2.0,>=1.17
-    - botocore <2.0,>=1.20
-    - dill <0.4,>=0.3.6
-    - frozenlist <2,>=1.3.1
-    - google-auth <3,>=2.14.1
-    - google-auth-oauthlib <1,>=0.5.2
-    - humanize <2,>=1.0.0
-    - janus <1.1,>=0.6
-    - nest-asyncio <2,>=1.5.8
-    - orjson <4,>=3.6.4
+    - azure-storage-blob >=12.11.0,<13
+    - boto3 >=1.17,<2.0
+    - botocore >=1.20,<2.0
+    - dill >=0.3.6,<0.4
+    - frozenlist >=1.3.1,<2
+    - google-auth >=2.14.1,<3
+    - google-auth-oauthlib >=0.5.2,<1
+    - humanize >=1.0.0,<2
+    - janus >=0.6,<1.1
+    - nest-asyncio >=1.5.8,<2
+    - orjson >=3.6.4,<4
     # - protobuf ==3.20.2
     # we have protobuf 3.20.3
     - protobuf >=3.20.2,<=3.20.3
-    # - rich <13,>=12.6.0
+    # - rich >=12.6.0,<13
     # we have rich 12.5.0
-    - rich <13,>=12.5.0
-    - typer <1,>=0.9.0
-    - python-json-logger <3,>=2.0.2
-    - pyyaml <7.0,>=6.0
-    - sortedcontainers <3,>=2.4.0
-    - tabulate <1,>=0.8.9
-    - jproperties <3,>=2.1.1
-    - avro <1.12,>=1.10
-    - bokeh <4,>=3
+    - rich >=12.5.0,<13
+    - typer >=0.9.0,<1
+    - python-json-logger >=2.0.2,<3
+    - pyyaml >=6.0,<7.0
+    - sortedcontainers >=2.4.0,<3
+    - tabulate >=0.8.9,<1
+    - jproperties >=2.1.1,<3
+    - avro >=1.10,<1.12
+    - bokeh >=3,<4
     - decorator <5
-    - Deprecated <1.3,>=1.2.10
+    - Deprecated >=1.2.10,<1.3
     - numpy <2
-    - pandas <3,>=2
+    - pandas >=2,<3
     - parsimonious <1
-    - plotly <6,>=5.18.0
-    - pyspark <=3.4.1,>=3.3.2
-    - requests <3,>=2.31.0
-    - scipy <1.12,>1.2
-    - uvloop <1,>=0.19.0  # [not win]
+    - plotly >=5.18.0,<6
+    - pyspark >=3.3.2,<=3.4.1
+    - requests >=2.31.0,<3
+    - scipy >1.2,<1.12
+    - uvloop >=0.19.0,<1  # [not win]
     # because pkg_resources is needed
     - setuptools
 
