--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,11 +36,14 @@ requirements:
     - python
     - pip
     - setuptools
-    # pre requisites
+    # prerequisites
     - pytest-runner
     - pyspark >=3.3.2,<=3.4.1
     - openjdk 11.*
     - lz4
+    # blas (lapack is brought in along)
+    - mkl-devel  {{ mkl }}  # [blas_impl == "mkl"]
+    - openblas-devel {{ openblas }}  # [blas_impl == "openblas"]
     # libsimdpp and catch2 unvendored dependencies
     - libsimdpp
     - catch2
@@ -75,7 +78,12 @@ requirements:
     - jproperties >=2.1.1,<3
   run:
     - python
+    # prerequisites
     - openjdk 11.*
+    # blas (lapack is brought in along)
+    - mkl-devel  {{ mkl }}  # [blas_impl == "mkl"]
+    - openblas-devel {{ openblas }}  # [blas_impl == "openblas"]
+    # deps
     - aiodns >=2.0.0,<3
     - aiohttp >=3.9,<4
     - azure-identity >=1.6.0,<2
